<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="btnTrueText">True</string>
    <string name="btnFalseText">False</string>
    <string name="btnNextText">Next</string>
    <string name="message_correct">Correct!</string>
    <string name="message_incorrect">Incorrect!</string>
    <string name="question_text_1">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_text_2">The source of the Nile River is in Egypt</string>
    <string name="btnPrevText">Prev</string>
    <string name="question_text_3">Constantinople is the largest city in Turkey</string>
    <string name="question_image_description">"Question image"</string>
    <string name="warning_text" translatable="false">Are you sure you want to do this?</string>
    <string name="show_answer_button_caption">Show answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast_text">Cheating is wrong</string>
    <string name="title_activity_cheat" translatable="false">Cheat</string>
    <string name="answer_text">Answer</string>
</resources>
